# gprMax

./: .gitattributes  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING_GUIDE.md  CONTRIBUTORS  CONTRIBUTORS.rst  CREDITS  Dockerfile  Docs_LasoMax.ipynb  MANIFEST.in  README.rst  Vérifs comparatives avant après.txt  anaconda_env.yml  antenna_like_GSSI_1500_patterns_E_rxsorigin.txt  box_half_model.h5  box_half_model.in  build.py  conda_env.yml  conda_env_CW.yml  conda_env_cuda.yml  conda_env_macOS.yml  conda_env_no_mpi.yml  courses.md  demo_bscan.py  demo_plots.py  diff_values.txt  far_field_test.ipynb  gprMax.toml  gsoc-ideas.md  nfft_snapshots_model1.npz  nfft_surface_model1.npz  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.cfg  (+5 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Docker/: Dockerfile  README.md  container_init_linux_64.sh  requirements.txt
Installation Script/: README.md  install_gprmax.py
ML/: ML.ipynb  ML_utilities.py  README.rst
data_LasoMax/: house.stl
docker/: ReadMe.md  container_init_linux_64.sh  dockerfile
docs/: .gitignore  Makefile  gprMax_WSL_integration.rst  requirements.txt
eigensource_test_run/: .gitignore  README.rst  plot_direction_snapshots.py  plot_eigenmode_direction_snapshots.py  run_all_eigensource_tests.bat  run_all_eigensource_tests.ps1  run_all_eigensource_tests.py  run_all_eigensource_tests.sh
examples/: API_test.py  antenna_like_GSSI_1500_fs.h5  antenna_like_GSSI_1500_fs.in  antenna_like_GSSI_1500_fs.py  antenna_like_GSSI_1500_patterns.py  antenna_like_GSSI_1500_patterns_H  antenna_like_GSSI_400_fs.py  antenna_like_MALA_1200_fs.py  antenna_wire_dipole_fs.py  cylinder_Ascan_2D.h5  cylinder_Ascan_2D.in  cylinder_Bscan_GSSI_1500.py  cylinder_half_space.vtkhdf  heterogeneous_soil_v2.h5  heterogeneous_soil_v2.in  metal_test.h5  metal_test.in  pml_test.in  pml_test_horipml.in  pml_test_mripml.in
gprMax/: Fluxes.py  Fluxes_ext.pyx  Fluxes_ext_gpu.py  __init__.py  __main__.py  _version.py  build_templates.py  cli.py  cmds_multiple.py  cmds_multiuse.py  cmds_single_use.py  cmds_singleuse.py  config.pxd  config.py  config_parser.py  constants.pxd  constants.py  contexts.py  exceptions.py  fields_output.py  fields_outputs.py  fields_update.pyx  fields_updates.pyx  fields_updates_ext.pyx  fields_updates_gpu.py  fractals.py  fractals_generate.pyx  fractals_generate_ext.pyx  geometry_out.pyx  geometry_outputs.py  geometry_outputs_ext.pyx  geometry_primitives.pyx  geometry_primitives_ext.pyx  geometry_views.py  gprMax.py  grid.py  hash_cmds_file.py  hash_cmds_geometry.py  hash_cmds_multiuse.py  hash_cmds_singleuse.py  (+53 more)
gprMax_HTML_Helper/: app.js  index.html  styles.css
gprMax_input_file_creation_helper_html/: README.md  index.html  styles.css
gprMax_newer/: constants.pxd  constants.py  geometry_outputs.py  input_cmd_funcs.py  model_build_run.py  optimisation_taguchi.py  pml.py  receivers.py  snapshots.py  snapshots_ext.pyx  sources.py
gsoc/: project-ideas-2019.md  project-ideas-2020.md  project-ideas-2021.md  project-ideas-2022.md  project-template-2019.md  project-template.md
hiptest/basic/: CMakeLists.txt  get-attrib.py  get_pro.py  test_hip.py  test_pybind.py  vec_add.hip.cpp
marimo_pocs/: 01_interactive_material.py  02_ascan_visualizer.py
marimo_prototype/: README.md  react_bscan_model.py  react_bscan_runner.py  react_model_builder.py  react_run_simulation.py  reactascan.py  reactbscan.py
my_files/: .gitignore
notebooks/: examples_simple_2D.ipynb
reframe_tests/: .gitignore  base_tests.py  reframe_benchmarks.py  reframe_tests.py
testing/: analytical_solutions.py  diff_output_files.py  test_experimental.py  test_models.py
tests/: .gitignore  __init__.py  analytical_solutions.py  base_tests.py  conftest.py  golden_reference.npy  reframe_benchmarks.py  reframe_tests.py  run_tests.py  test_analytical_solutions.py  test_benchmarks.py  test_compare_analytical.py  test_compare_experimental.py  test_compare_numerical.py  test_experimental.py  test_fractals.py  test_geometry_objects_read.py  test_get_ascan_data.py  test_h5_reader.py  test_input_cmd_funcs.py  test_memory_cleanup.py  test_mixingmodels.py  test_models.py  test_models_basic.py  test_mpi.py  test_plate_materials.py  test_plot_save.py  test_update_functions.py  test_utilities.py  test_utilities_round.py  test_waveforms.py
tools/: convert_png2h5.py  inputfile_new2old.py  inputfile_old2new.py  ml_runtime_predictor.py  outputfile_old2hdf5.py  outputfile_old2new.py  outputfiles_merge.py  outputfiles_mergehdf5.py  plot_Ascan.py  plot_Ascan_hdf5.py  plot_Bscan.py  plot_Bscan_hdf5.py  plot_ShotGather.py  plot_antenna_params.py  plot_antenna_params_UtEl.py  plot_benchmarks.py  plot_builtin_wave.py  plot_diffs.py  plot_fields.py  plot_hdf5_Ascan.py  plot_hdf5_Bscan.py  plot_s11.py  plot_source_wave.py  plot_waveform.py  run_benchmarks.py  test_plot_enhancements.py  visualize_3d.py  water_content_analysis.py
user_libs/: Debye_Fit.py  antennas.py  optimisation_taguchi_fitness.py  optimisation_taguchi_plot.py
user_models/: CRIM_test.in  HavrilakNegami_test.in  HavriliakNegami_material_box.in  Jonscher_test.in  Rawdata_test.in  amphora.py  amphora.vtr  antenna_MALA_1200_fs_opt.in  antenna_MALA_1200_fs_real.txt  antenna_like_GSSI_1500_fs.in  antenna_like_GSSI_1500_fs.out  antenna_like_GSSI_1500_fs.py  antenna_like_GSSI_1500_patterns_E.in  antenna_like_GSSI_1500_patterns_H.in  antenna_like_GSSI_400_fs.in  antenna_like_GSSI_400_fs.out  antenna_like_GSSI_400_fs.py  antenna_like_MALA_1200_fs.in  antenna_like_MALA_1200_fs.py  antenna_like_MALA_1200_fs_opt.in  antenna_wire_dipole_fs.in  antenna_wire_dipole_fs.out  antenna_wire_dipole_fs.py  antenna_wire_dipole_fs.vtp  bunny.py  cylinder_2D_py.in  cylinder_Ascan_2D.in  cylinder_Ascan_2D.out  cylinder_Ascan_2D_opt.in  cylinder_Bscan_2D.in  cylinder_Bscan_2D1.out  cylinder_Bscan_2D10.out  cylinder_Bscan_2D11.out  cylinder_Bscan_2D12.out  cylinder_Bscan_2D13.out  cylinder_Bscan_2D14.out  cylinder_Bscan_2D15.out  cylinder_Bscan_2D16.out  (+64 more)
(+1229 files in other folders)
