[metadata]
name = gprMax

[flake8]
max-line-length = 200
ignore = E402, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --tb=short
markers =
    slow: marks tests that run full FDTD simulations (deselect with '-m "not slow"')
    gpu: marks tests that require a CUDA-capable GPU
    mpi: marks tests that require MPI (mpi4py)
