# setup.cfg — gprMax project configuration
#
# This file centralises configuration for multiple Python tools that were
# previously scattered across different files (or missing entirely).
#
# Tools configured here:
#   [metadata]      → setuptools package metadata (supplement to setup.py)
#   [flake8]        → PEP 8 linting rules (used by pre-commit and lint.yml CI)
#   [tool:pytest]   → pytest discovery, markers, and default CLI options
#   [coverage:run]  → pytest-cov measurement options
#   [coverage:report] → coverage reporting thresholds & display options
#   [isort]         → import ordering (kept in sync with .pre-commit-config.yaml)
#
# Why setup.cfg instead of pyproject.toml for flake8 / pytest?
#   flake8 does not yet read pyproject.toml (as of flake8 7.x).
#   pytest reads both; we keep pytest config here so all tool configs live
#   in one place.  The build-system table stays in pyproject.toml.
#
# NOTE: The README.rst references this file ("see setup.cfg for flake8 config").
#       This file now fulfils that promise — previously setup.cfg did not exist
#       in the repository at all.
#

[metadata]
name = gprMax
# Version is read dynamically from gprMax/_version.py inside setup.py.
# We declare it here as a cross-reference hint for tools that parse setup.cfg.
version = attr: gprMax._version.__version__
author = Craig Warren, Antonis Giannopoulos, and John Hartley
url = http://www.gprmax.com
license = GPLv3+
description = Electromagnetic Modelling Software based on the Finite-Difference Time-Domain (FDTD) method
long_description = file: README.rst
long_description_content_type = text/x-rst
python_requires = >3.7
classifiers =
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering


# ── flake8 ───────────────────────────────────────────────────────────────────
#
# max-line-length = 200
#   gprMax GPU kernel files (fields_updates_gpu.py) contain FDTD update
#   equations written as single-line mathematical expressions for readability.
#   Breaking these across lines would obscure the physics.  PEP 8's 79-char
#   limit is not appropriate for a scientific computing project of this type.
#
# ignore = E402
#   gprMax imports pycuda, pyopencl, and mpi4py INSIDE functions rather than
#   at the top of the module.  This is intentional — these are optional
#   dependencies that crash on import if the hardware/driver is absent.
#   Conditional imports must be inside functions, which triggers E402.
#
# ignore += W503
#   W503 ("line break before binary operator") and W504 are mutually exclusive.
#   We follow Black/PEP 8's preferred style (break BEFORE the operator).
#
# ignore += E501
#   E501 ("line too long") is already controlled by max-line-length above.
#   Listing E501 here suppresses duplicate warnings from tools that check both.
#
# per-file-ignores
#   setup.py — E402 (conditional imports at module level during build),
#              W0611 (unused imports vary by platform/build step)
#
[flake8]
max-line-length = 200
ignore = E402, W503, E501
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    docs/,
    examples/,
    toolboxes/
per-file-ignores =
    setup.py: E402


# ── pytest ────────────────────────────────────────────────────────────────────
#
# testpaths
#   Restrict pytest discovery to 'tests/' only.  Without this, pytest would
#   also walk 'gprMax/', 'docs/', 'examples/' etc. looking for test_*.py files,
#   which slows collection and can import half-built modules incorrectly.
#
# addopts
#   -v              → verbose test names
#   --tb=short      → concise tracebacks (enough detail, not overwhelming)
#   --strict-markers → any test using an unregistered marker is an error.
#                      This prevents typos like @pytest.mark.slwo going silent.
#   -ra             → show a short summary of all non-passing tests at the end
#   --import-mode=importlib → avoids sys.path manipulation; more robust for
#                              projects with editable installs and namespace pkgs
#
# markers
#   These MUST be declared here for --strict-markers to work.
#   They are also registered programmatically in tests/conftest.py for
#   compatibility with older pytest versions.
#
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -v
    --tb=short
    --strict-markers
    -ra
markers =
    slow: marks tests that run full FDTD simulations (minutes each) — deselect with -m 'not slow'
    gpu: marks tests that require a CUDA-capable NVIDIA GPU — deselect with -m 'not gpu'
    mpi: marks tests that require an MPI runtime (Open MPI or MPICH) — deselect with -m 'not mpi'


# ── coverage (pytest-cov) ────────────────────────────────────────────────────
#
# source = gprMax
#   Only measure coverage in the gprMax package; skip test files themselves,
#   setup.py, and third-party code.
#
# branch = True
#   Measure branch coverage in addition to line coverage.  A line that has an
#   if-else branch but the else is never exercised would show 100% line coverage
#   but only 50% branch coverage.
#
# omit
#   Cython-generated .c source files are not Python and are not meaningful to
#   include in Python coverage reports.
#
[coverage:run]
source = gprMax
branch = True
omit =
    gprMax/cython/*
    gprMax/cuda_opencl/*
    setup.py
    tests/*

[coverage:report]
show_missing = True
skip_covered = False
# Fail the coverage report step if total coverage drops below this level.
# Start at 0 to avoid blocking CI while the test suite is being built out,
# and raise this threshold incrementally as coverage improves.
fail_under = 0
exclude_lines =
    # Standard pragma comment to mark intentionally uncovered lines
    pragma: no cover
    # Abstract methods are not directly testable
    raise NotImplementedError
    # Platform-specific branches in setup.py
    if sys.platform ==
    if runner.os ==


# ── isort ────────────────────────────────────────────────────────────────────
#
# Kept in sync with --profile=black --line-length=200 in .pre-commit-config.yaml.
# Both configuration sources are needed: isort reads setup.cfg when run via
# command line, and pre-commit passes args from .pre-commit-config.yaml.
# Having both ensures consistency regardless of how isort is invoked.
#
[isort]
profile = black
line_length = 200
skip_glob = **/gprMax/fields_updates*.py
